--- a/009_CSS/css/bai6.css
+++ b/009_CSS/css/bai6.css
@@ -9,6 +9,10 @@ body {
     text-align: center;
 }
 /* CSS header */
+a {
+    color: white;
+    text-decoration: none;
+}
 header {
     background-color: rgb(45, 47, 39, .7);
     display: flex;
@@ -19,11 +23,12 @@ header {
     z-index: 1;
 }
 li {
-    padding: 0 5px;
+    margin: auto;
+    padding: 5px;
 }
 #logo {
     position: relative;
-    top: 1rem;
+    top: 1.25rem;
 }
 ul {
     display: flex;
@@ -35,6 +40,7 @@ main {
     position: relative;
     top: 9rem;
     right: 0.3rem;
+    width: 940px;
 }
 .info {
     display: flex;
@@ -59,7 +65,12 @@ main {
 article {
     display: grid;
     grid-template-columns: auto auto auto auto;
+    grid-template-rows: auto auto;
     column-gap: 20px;
+}
+article > h2 {
+    font-weight: 100;
+    grid-column: 1/8;
 }
 .article-title {
     font-size: 20px;
